--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "vercel dev",
+    "build": "tsc",
+    "start": "node api/me.ts"
+  },  
   "keywords": [],
   "author": "",
   "license": "ISC",
