--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,27 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "api/**/*.ts",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "api/**/*.ts",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "public/**/*",
+            "use": "@vercel/static"
+        }
     ],
     "routes": [
-      { "src": "/api/(.*)", "dest": "/api/$1.ts" }
+        {
+            "src": "/",
+            "dest": "/public/index.html"
+        },
+        {
+            "src": "/api/(.*)",
+            "dest": "/api/$1.ts"
+        },
+        {
+            "src": "/api/activity/(.*)",
+            "dest": "/api/activity/[id].ts"
+        }
     ]
-  }
-  
+}
